# computable-lab

./: .clinerules  .clinerules.long  .gitignore  API-REFERENCE.md  API.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  config.example.yaml  config.yaml  docker-compose.yaml  labware-editor-initial.yml  labware-picker-opened.yml  package-lock.json  package.json  philosophy.txt  pnpm-lock.yaml  pnpm-workspace.yaml  specification.md  start-app.sh  tsconfig.json  verification-check.txt  vitest.config.ts  vitest.workspace.ts
.ralph/: ralph-history.json  ralph-loop.state.json
app/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
cline_docs/: CONTEXT.md  WORKFLOWS.md
compiler-specs/: 00-authority-map.md  01-spec-suite.md  10-charter.md  20-event-graph-ir.md  30-context.md  40-knowledge.md  50-protocol-lifecycle.md  60-compiler.md  70-derivation-models.md  80-ai-pre-compiler.md  81-protocol-extraction-shape.md  90-ros-toy-validation.md  SESSION-NOTES-2026-04-16.md
docs/: adr-event-vignette-authoring-v2.md  adr-execution-control-data-plane-separation.md  adr-execution-planning-canonical-model.md  (+15 more)
server/python-executor-service/: README.md  pyproject.toml
server/python-executor-service/src/python_executor_service/: __init__.py  config.py  pylabrobot_bridge.py  runner_base.py  runner_registry.py
server/python-executor-service/src/python_executor_service/runners/: __init__.py  integra_assist.py
server/python-executor-service/tests/: test_pyalab_hook.py
(+2626 files in other folders)
